--- a/parts/cvsservice/diffdialogbase.ui
+++ b/parts/cvsservice/diffdialogbase.ui
@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>461</width>
-            <height>134</height>
+            <width>519</width>
+            <height>217</height>
         </rect>
     </property>
     <property name="caption">
@@ -22,66 +22,130 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <widget class="QLayoutWidget">
+        <widget class="QButtonGroup">
             <property name="name">
-                <cstring>layout3</cstring>
+                <cstring>buttonGroup1</cstring>
             </property>
-            <grid>
+            <property name="title">
+                <string>Build difference between</string>
+            </property>
+            <vbox>
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <widget class="QLabel" row="0" column="0">
+                <widget class="QRadioButton">
                     <property name="name">
-                        <cstring>textLabel1</cstring>
-                    </property>
-                    <property name="sizePolicy">
-                        <sizepolicy>
-                            <hsizetype>0</hsizetype>
-                            <vsizetype>0</vsizetype>
-                            <horstretch>0</horstretch>
-                            <verstretch>0</verstretch>
-                        </sizepolicy>
+                        <cstring>diffLocalHeadRadio</cstring>
                     </property>
                     <property name="text">
-                        <string>Revision A:</string>
+                        <string>local copy and HEAD</string>
+                    </property>
+                    <property name="checked">
+                        <bool>true</bool>
                     </property>
                 </widget>
-                <widget class="QLineEdit" row="1" column="1">
+                <widget class="QLayoutWidget">
                     <property name="name">
-                        <cstring>revbEdit</cstring>
+                        <cstring>layout3</cstring>
+                    </property>
+                    <hbox>
+                        <property name="name">
+                            <cstring>unnamed</cstring>
+                        </property>
+                        <widget class="QRadioButton">
+                            <property name="name">
+                                <cstring>diffLocalOtherRadio</cstring>
+                            </property>
+                            <property name="text">
+                                <string>local copy and an arbitrary revision</string>
+                            </property>
+                        </widget>
+                        <widget class="QLineEdit">
+                            <property name="name">
+                                <cstring>revOtherEdit</cstring>
+                            </property>
+                            <property name="enabled">
+                                <bool>false</bool>
+                            </property>
+                        </widget>
+                    </hbox>
+                </widget>
+                <widget class="QRadioButton">
+                    <property name="name">
+                        <cstring>diffArbitraryRevRadio</cstring>
                     </property>
                     <property name="text">
-                        <string></string>
-                    </property>
-                    <property name="toolTip" stdset="0">
-                        <string>Second revision to compare (leave empty to diff against HEAD)</string>
+                        <string>two arbitrary revisions/tags</string>
                     </property>
                 </widget>
-                <widget class="QLineEdit" row="1" column="0">
+                <widget class="QLayoutWidget">
                     <property name="name">
-                        <cstring>revaEdit</cstring>
+                        <cstring>layout3</cstring>
                     </property>
-                    <property name="toolTip" stdset="0">
-                        <string>First revision to compare</string>
-                    </property>
+                    <grid>
+                        <property name="name">
+                            <cstring>unnamed</cstring>
+                        </property>
+                        <widget class="QLabel" row="0" column="0">
+                            <property name="name">
+                                <cstring>textLabel1</cstring>
+                            </property>
+                            <property name="sizePolicy">
+                                <sizepolicy>
+                                    <hsizetype>0</hsizetype>
+                                    <vsizetype>0</vsizetype>
+                                    <horstretch>0</horstretch>
+                                    <verstretch>0</verstretch>
+                                </sizepolicy>
+                            </property>
+                            <property name="text">
+                                <string>Revision A:</string>
+                            </property>
+                        </widget>
+                        <widget class="QLineEdit" row="1" column="1">
+                            <property name="name">
+                                <cstring>revbEdit</cstring>
+                            </property>
+                            <property name="enabled">
+                                <bool>false</bool>
+                            </property>
+                            <property name="text">
+                                <string></string>
+                            </property>
+                            <property name="toolTip" stdset="0">
+                                <string>Second revision to compare (leave empty to diff against HEAD)</string>
+                            </property>
+                        </widget>
+                        <widget class="QLineEdit" row="1" column="0">
+                            <property name="name">
+                                <cstring>revaEdit</cstring>
+                            </property>
+                            <property name="enabled">
+                                <bool>false</bool>
+                            </property>
+                            <property name="toolTip" stdset="0">
+                                <string>First revision to compare</string>
+                            </property>
+                        </widget>
+                        <widget class="QLabel" row="0" column="1">
+                            <property name="name">
+                                <cstring>textLabel2</cstring>
+                            </property>
+                            <property name="sizePolicy">
+                                <sizepolicy>
+                                    <hsizetype>0</hsizetype>
+                                    <vsizetype>0</vsizetype>
+                                    <horstretch>0</horstretch>
+                                    <verstretch>0</verstretch>
+                                </sizepolicy>
+                            </property>
+                            <property name="text">
+                                <string>Revision B:</string>
+                            </property>
+                        </widget>
+                    </grid>
                 </widget>
-                <widget class="QLabel" row="0" column="1">
-                    <property name="name">
-                        <cstring>textLabel2</cstring>
-                    </property>
-                    <property name="sizePolicy">
-                        <sizepolicy>
-                            <hsizetype>0</hsizetype>
-                            <vsizetype>0</vsizetype>
-                            <horstretch>0</horstretch>
-                            <verstretch>0</verstretch>
-                        </sizepolicy>
-                    </property>
-                    <property name="text">
-                        <string>Revision B:</string>
-                    </property>
-                </widget>
-            </grid>
+            </vbox>
         </widget>
         <widget class="Line">
             <property name="name">
@@ -169,6 +233,24 @@
         <signal>clicked()</signal>
         <receiver>DiffDialog</receiver>
         <slot>reject()</slot>
+    </connection>
+    <connection>
+        <sender>diffArbitraryRevRadio</sender>
+        <signal>toggled(bool)</signal>
+        <receiver>revaEdit</receiver>
+        <slot>setEnabled(bool)</slot>
+    </connection>
+    <connection>
+        <sender>diffArbitraryRevRadio</sender>
+        <signal>toggled(bool)</signal>
+        <receiver>revbEdit</receiver>
+        <slot>setEnabled(bool)</slot>
+    </connection>
+    <connection>
+        <sender>diffLocalOtherRadio</sender>
+        <signal>toggled(bool)</signal>
+        <receiver>revOtherEdit</receiver>
+        <slot>setEnabled(bool)</slot>
     </connection>
 </connections>
 <layoutdefaults spacing="6" margin="11"/>
